[gd_scene load_steps=7 format=2]

[ext_resource path="res://EnemyII.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/enemy2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/character-hp-bg.png" type="Texture" id=6]
[ext_resource path="res://Sprites/character-hp-bar.png" type="Texture" id=7]
[ext_resource path="res://Sounds/death.ogg" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 28.2464

[node name="EnemyII" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -6, 0 )
texture = ExtResource( 2 )

[node name="HealthProgress" type="TextureProgress" parent="."]
margin_left = -34.4264
margin_top = -61.0714
margin_right = 205.574
margin_bottom = -22.0714
rect_scale = Vector2( 0.3, 0.3 )
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="value_changed" from="HealthProgress" to="." method="_on_HealthProgress_value_changed"]
